syntax = "proto3";
package zebra.indexer.rpc;

message Empty {};

service Indexer {
  // Notifies listeners of chain tip changes
  rpc ChainTipChange(Empty) returns (stream Empty);
}